# invsto-app

./: .env  README.md  dockerfile  pyproject.toml  requirements.txt  seed.py
app/: main.py
logic/: startegy.py
prisma/: schema.prisma
tests/: test_app.py
validation/: schema.py
